--- a/main.html
+++ b/main.html
@@ -68,7 +68,8 @@
                 <input ng-model="diet.vegan" class="checkbox" type="checkbox" value="vegan">Vegan<br>
                 <input ng-model="diet.glutenFree" class="checkbox" type="checkbox" value="glutenFree">Gluten Free<br>
                 <input ng-model="diet.citrusFree" class="checkbox" type="checkbox" value="citrusFree">Citrus Free<br>
-                  <input ng-click="toolTipper()" type="submit" value="Submit Your Preferences">
+                  <input ng-click="toolTipper()" type="submit" value="Submit Your Preferences"> 
+                  <input ng-click="resetForm()" type="button" value="Reset">
               </form>
             </div>
         </div><!-- /.col-lg-4 -->
